--- a/template_app/Gemfile
+++ b/template_app/Gemfile
@@ -7,9 +7,10 @@ end
 
 ruby '2.4.0'
 
-gem 'bcrypt',         '3.1.11'
+gem 'bcrypt', '3.1.11'
 
 gem 'therubyracer'
+
 gem 'less-rails-bootstrap'
 
 gem "font-awesome-rails"
@@ -23,7 +24,7 @@ gem 'pg', '~> 0.18'
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
-gem 'sass-rails', '~> 5.0'
+gem 'sass-rails', '~> 5.0', '>= 5.0.6'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
